--- a/index.html
+++ b/index.html
@@ -4,8 +4,92 @@
         <meta charset="UTF-8">
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
         <meta content="width=device-width, initial-scale=1" name="viewport">
+        <link href="CSS/bootstrap.min.css" rel="stylesheet">
+        <link href="CSS/main.css" rel="stylesheet">
+        <link href="CSS/font-awesome.min.css" rel="stylesheet">
         <title>Teoría de la Computación</title>
     </head>
     <body>
+        <div class="row affix-row">
+            <div class="col-sm-3 col-md-2 affix-sidebar">
+                <div class="sidebar-nav">
+                    <div class="navbar navbar-default" role="navigation">
+                        <div class="navbar-header">
+                            <button class="navbar-toggle" data-target=".sidebar-navbar-collapse" data-toggle="collapse" type="button"><span class="sr-only">Teoría de la Computación</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button> <span class="visible-xs navbar-brand">Menú</span>
+                        </div>
+                        <div class="navbar-collapse collapse sidebar-navbar-collapse">
+                            <ul class="nav navbar-nav" id="sidenav01">
+                                <li class="active">
+                                    <a class="collapsed" data-parent="#sidenav01" data-target="#toggleDemo0" data-toggle="collapse" href="index.html">
+                                    <h4><span class=""><img src="IMG/owl.png" style="height:80px; width:80px;"></span>Buhos <br>
+                                    Herramientas</h4></a>
+                                </li>
+                                <li>
+                                    <a class="collapsed" data-parent="#sidenav01" data-target="#SubMenu1" data-toggle="collapse" href="#"><span class="glyphicon glyphicon-ok-sign"></span> Lenguajes Regulares<span class="caret pull-right"></span></a>
+                                    <div class="collapse" id="SubMenu1" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li>
+                                                <a href="#" id="load_DFA">DFA</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_NFA">NFA</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_REGEX">Regex</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_CONVERTIR">Convertir</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a class="collapsed" data-parent="#sidenav01" data-target="#SubMenu2" data-toggle="collapse" href="#"><span class="glyphicon glyphicon-cloud"></span> Lenguajes de Contexto<span class="caret pull-right"></span></a>
+                                    <div class="collapse" id="SubMenu2" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li>
+                                                <a href="#" id="load_PDA">PDA</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_CFG">CFG</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_CFGtoCNF">CFG to CNF</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li>
+                                    <a class="collapsed" data-parent="#sidenav01" data-target="#SubMenu3" data-toggle="collapse" href="#"><span class="glyphicon glyphicon-retweet"></span> Lenguajes Decidibles<span class="caret pull-right"></span></a>
+                                    <div class="collapse" id="SubMenu3" style="height: 0px;">
+                                        <ul class="nav nav-list">
+                                            <li>
+                                                <a href="#" id="load_TMACHINE">Turing Machine</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9 col-md-10 affix-content">
+                <div class="container">
+                    <div class="page-header">
+                        <center>
+                            <h2><span class="glyphicon glyphicon-equalizer"></span> Teoría de la Computación<a href="index.html"><i aria-hidden="true" class="fa fa-home fa-3x" id="House"></i></a></h2>
+                        </center>
+                    </div>
+                    <div id="container-body"></div>
+                    <hr>
+                    <div class="footer">
+                        <p>UNITEC © 2016</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
+    <script src="JS/jquery-3.1.1.js"></script> 
+    <script src="JS/bootstrap.min.js"></script>
 </html>
