--- a/index.html
+++ b/index.html
@@ -89,7 +89,46 @@
                 </div>
             </div>
         </div>
+            <script src="JS/jquery-3.1.1.js">
+            </script> 
+            <script src="JS/bootstrap.min.js">
+            </script> 
+            <script src="JS/MainLoader.js">
+            </script> 
+            <script src="JS/core/math.js"></script>
+            <script src="JS/core/save.js"></script>
+            <script src="JS/elements/link.js"></script>
+            <script src="JS/elements/node.js"></script>
+            <script src="JS/elements/self_link.js"></script>
+            <script src="JS/elements/start_link.js"></script>
+            <script src="JS/elements/temporary_link.js"></script>
+            <script src="JS/export_as/latex.js"></script>
+            <script src="JS/export_as/svg.js"></script>
+            
+             
+            <!--<script>
+                   if (typeof btoa == 'undefined') {
+                       function btoa(str) {
+                           var chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';
+                           var encoded = [];
+                           var c = 0;
+                           while (c < str.length) {
+                               var b0 = str.charCodeAt(c++);
+                               var b1 = str.charCodeAt(c++);
+                               var b2 = str.charCodeAt(c++);
+                               var buf = (b0 << 16) + ((b1 || 0) << 8) + (b2 || 0);
+                               var i0 = (buf & (63 << 18)) >> 18;
+                               var i1 = (buf & (63 << 12)) >> 12;
+                               var i2 = isNaN(b1) ? 64 : (buf & (63 << 6)) >> 6;
+                               var i3 = isNaN(b2) ? 64 : (buf & 63);
+                               encoded[encoded.length] = chars.charAt(i0);
+                               encoded[encoded.length] = chars.charAt(i1);
+                               encoded[encoded.length] = chars.charAt(i2);
+                               encoded[encoded.length] = chars.charAt(i3);
+                           }
+                           return encoded.join('');
+                       }
+                   }
+            </script>-->
     </body>
-    <script src="JS/jquery-3.1.1.js"></script> 
-    <script src="JS/bootstrap.min.js"></script>
 </html>
