--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             <script src="JS/bootstrap.min.js">
             </script> 
             <script src="JS/MainLoader.js">
-            </script> 
+            </script>
+            <script src="JS/core/fms.js"></script>
             <script src="JS/core/math.js"></script>
             <script src="JS/core/save.js"></script>
             <script src="JS/elements/link.js"></script>
