--- a/index.html
+++ b/index.html
@@ -86,18 +86,19 @@
                 </div>
             </div>
         </div>
-            <script src="JS/jquery-3.1.1.js"></script> 
-            <script src="JS/bootstrap.min.js"></script> 
-            <script src="JS/MainLoader.js"></script> 
-            <script src="JS/core/math.js"></script>
-            <script src="JS/core/save.js"></script>
-            <script src="JS/elements/link.js"></script>
-            <script src="JS/elements/node.js"></script>
-            <script src="JS/elements/self_link.js"></script>
-            <script src="JS/elements/start_link.js"></script>
-            <script src="JS/elements/temporary_link.js"></script>
-            <script src="JS/export_as/latex.js"></script>
-            <script src="JS/export_as/svg.js"></script>
-            
+        <script src="JS/jquery-3.1.1.js"></script> 
+        <script src="JS/bootstrap.min.js"></script> 
+        <script src="JS/MainLoader.js"></script> 
+        <script src="JS/core/math.js"></script>
+        <script src="JS/core/save.js"></script>
+        <script src="JS/elements/link.js"></script>
+        <script src="JS/elements/node.js"></script>
+        <script src="JS/elements/self_link.js"></script>
+        <script src="JS/elements/start_link.js"></script>
+        <script src="JS/elements/temporary_link.js"></script>
+        <script src="JS/export_as/latex.js"></script>
+        <script src="JS/export_as/svg.js"></script>
+        <script src="JS/machines/DFA.js"></script>
+        <script src="JS/machines/NFA.js"></script>
     </body>
 </html>
