--- a/index.html
+++ b/index.html
@@ -100,5 +100,6 @@
         <script src="JS/export_as/svg.js"></script>
         <script src="JS/machines/DFA.js"></script>
         <script src="JS/machines/NFA.js"></script>
+        <script src="JS/machines/regex.js"></script>
     </body>
 </html>
