trying viz library

--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
         <script src="JS/machines/DFA.js"></script>
         <script src="JS/machines/NFA.js"></script>
         <script src="JS/machines/regex.js"></script>
+        <script src="JS/viz/viz.js"></script>
     </body>
 </html>
