--- a/index.html
+++ b/index.html
@@ -86,6 +86,27 @@
                 </div>
             </div>
         </div>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="vizModal" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                      <h4 class="modal-title">Grafo</h4>
+                    </div>
+                    <div class="modal-body">
+                      <span id="vizGraph"></span>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <!-- Modal -->
+        
         <script src="JS/jquery-3.1.1.js"></script> 
         <script src="JS/bootstrap.min.js"></script> 
         <script src="JS/MainLoader.js"></script> 
