--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <link href="CSS/bootstrap.min.css" rel="stylesheet">
         <link href="CSS/main.css" rel="stylesheet">
         <link href="CSS/font-awesome.min.css" rel="stylesheet">
+        <script src="JS/sweetalert.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="CSS/sweetalert.css">       
         <title>Teoría de la Computación</title>
     </head>
     <body>
