Validación : Estado Inicial,Final, y verificar si existen las transiciones correspondientes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <meta content="IE=edge" http-equiv="X-UA-Compatible">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <link href="CSS/bootstrap.min.css" rel="stylesheet">
-        <link href="CSS/main.css" rel="stylesheet">
-        <link href="CSS/font-awesome.min.css" rel="stylesheet">
+        <link href="CSS/bootstrap.min.css" type="text/css"  rel="stylesheet">
+        <link href="CSS/main.css" type="text/css" rel="stylesheet">
+        <link href="CSS/font-awesome.min.css" type="text/css" rel="stylesheet">
         <script src="JS/sweetalert.min.js"></script>
         <link rel="stylesheet" type="text/css" href="CSS/sweetalert.css">       
         <title>Teoría de la Computación</title>
