went to draw dfa to nfa

--- a/index.html
+++ b/index.html
@@ -99,7 +99,18 @@
                       <h4 class="modal-title">Grafo</h4>
                     </div>
                     <div class="modal-body">
-                      <span id="vizGraph"></span>
+                        <div class = "row">
+                            <div class = "col-md-6">
+                               <h2>Before</h2>
+                            <span id="vizGraphBefore" ></span>
+                            </div>
+                            
+                            <div style="border-left: thick solid #ff0000;" class = "col-md-6">
+                                <h2>After</h2>
+                                <span id="vizGraphAfter" ></span>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
