NFA to DFA Done, but is not Drawing in VIZ

--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                 <div class="modal-content">
                     <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Grafo</h4>
+                      <h4 class="modal-title">Comparación de Autómatas</h4>
                     </div>
                     <div class="modal-body">
                         <div class = "row">
                             <div class = "col-md-6">
-                               <h2>Before</h2>
+                               <h2>Before(NFA)</h2>
                             <span id="vizGraphBefore" ></span>
                             </div>
                             
                             <div style="border-left: thick solid #ff0000;" class = "col-md-6">
-                                <h2>After</h2>
+                                <h2>After (DFA)</h2>
                                 <span id="vizGraphAfter" ></span>
                             </div>
                         </div>
