viz graphing bug fixed

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                     <div class="modal-body">
                         <div class = "row">
                             <div class = "col-md-6">
-                               <h2>Before(NFA)</h2>
+                               <h2 id="modal_Title1">Before(NFA)</h2>
                             <span id="vizGraphBefore" ></span>
                             </div>
                             
                             <div style="border-left: thick solid #ff0000;" class = "col-md-6">
-                                <h2>After (DFA)</h2>
+                                <h2 id="modal_Title2">After (DFA)</h2>
                                 <span id="vizGraphAfter" ></span>
                             </div>
                         </div>
