add pda view and others

--- a/index.html
+++ b/index.html
@@ -52,9 +52,6 @@
                                             <li>
                                                 <a href="#" id="load_CFG">CFG</a>
                                             </li>
-                                            <li>
-                                                <a href="#" id="load_CFGtoCNF">CFG to CNF</a>
-                                            </li>
                                         </ul>
                                     </div>
                                 </li>
@@ -136,6 +133,7 @@
         <script src="JS/machines/NFA.js"></script>
 		<script src="JS/regex2nfa/regex2nfa.js"></script>
         <script src="JS/machines/regex.js"></script>
+        <script src="JS/machines/pda.js"></script>
         <script src="JS/viz/viz.js"></script>
 		
     </body>
