examples method done

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
         <script src="JS/bootstrap.min.js"></script> 
         <script src="JS/MainLoader.js"></script> 
         <script src="JS/core/math.js"></script>
-        <script src="JS/core/save.js"></script>
         <script src="JS/elements/link.js"></script>
         <script src="JS/elements/node.js"></script>
         <script src="JS/elements/self_link.js"></script>
@@ -134,6 +133,7 @@
 		<script src="JS/regex2nfa/regparser-browser.js"></script>
         <script src="JS/machines/regex.js"></script>
         <script src="JS/machines/pda.js"></script>
+        <script src="JS/machines/turing.js"></script>
         <script src="JS/viz/viz.js"></script>
 		
     </body>
