--- a/index.html
+++ b/index.html
@@ -163,7 +163,13 @@ integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8S
         <script src="JS/machines/regex.js"></script>
         <script src="JS/machines/pda.js"></script>
         <script src="JS/machines/turing.js"></script>
-        <script src="JS/viz/viz.js"></script>
+        <script src="JS/algorithms/heap.js"></script>
+        <script src="JS/algorithms/msp.js"></script>
+        <script src="JS/algorithms/shortest_path.js"></script>
+        <script src="JS/algorithms/traversal.js"></script>
+        <script src="JS/algorithms/minPriorityQueue.js"></script>
+        <script src="JS/graph.js"></script>
+        
 		
     </body>
 </html>
