--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ integrity="sha384-mvYjhBJXQ9VlNETV/xXShy849GsBHnKzVVudnMOcWUVM/6Nd2ksj8VNng5f8yl
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet"
 integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
         <link href="CSS/main.css" type="text/css" rel="stylesheet">
+        <link href="CSS/grammar.css" type="text/css" rel="stylesheet">
+        <link href="CSS/grammar_mod.css" type="text/css" rel="stylesheet">
         <script src="JS/sweetalert.min.js"></script>
         <link rel="stylesheet" type="text/css" href="CSS/sweetalert.css">       
         <title>Teoría de la Computación</title>
@@ -53,6 +55,9 @@ integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8S
                                             </li>
                                             <li>
                                                 <a href="#" id="load_CFG">CFG</a>
+                                            </li>
+                                            <li>
+                                                <a href="#" id="load_CFGtoCNF">CFG a CNF</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -159,7 +164,6 @@ integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8S
         <script src="JS/export_as/svg.js"></script>
         <script src="JS/machines/DFA.js"></script>
         <script src="JS/machines/NFA.js"></script>
-		<script src="JS/machines/cfg.js"></script>
 		<script src="JS/CNFscripts/cfg.js"></script>
 		<script src="JS/regex2nfa/regparser-browser.js"></script>
         <script src="JS/machines/regex.js"></script>
@@ -173,6 +177,8 @@ integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8S
         <script src="JS/algorithms/traversal.js"></script>
         <script src="JS/algorithms/minPriorityQueue.js"></script>
         <script src="JS/graph.js"></script>
+        
+        <script src="JS/CFGrammar/built.js"></script>
 		
 		
 		<script src="JS/CNFscripts/GrammaticSymbol.js" charset="utf-8"></script>
